--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="tab-contents" id="experience">
           <ul>
             <li><span>2023 - Current</span><br>Data Entry Specialist</li>
-            <li><span>Software Developer Intern</span><br>ACLIDA University — 10 months<br>HTML, CSS, JS, C#, ASP.NET MVC, SQL</li>
+            <li><span>Self-Learning & Academic Projects</span><br>ACLIDA University of Business<br>HTML, CSS, JS, C#, ASP.NET MVC, SQL</li>
           </ul>
         </div>
         <div class="tab-contents" id="education">
@@ -169,13 +169,14 @@
         <div class="contact-left">
           <h1 class="sub-title">Contact Me</h1>
           <p><i class="fa-solid fa-envelope"></i> rasovanna785@gmail.com</p>
-          <p><i class="fa-solid fa-phone"></i> +855 2901277</p>
+          <p><i class="fa-solid fa-phone"></i> +855 29012**</p>
           <div class="social-icons">
             <a href="https://www.facebook.com/share/18oMJ2kkFu/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://linkedin.com/in/sovanna-ra-866504347/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://github.com/Vanna-Gio" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://t.me/sovannara3" target="_blank"><i class="fa-brands fa-instagram"></i></a>
           </div>
-          <a href="assets/my-cv.pdf" download class="btn">Download CV</a>
+          <a href="assets/CV.pdf" download class="btn">Download CV</a>
         </div>
         <div class="contact-right">
           <form id="contact-form">
